--- a/app/Presenters/templates/@layout.latte
+++ b/app/Presenters/templates/@layout.latte
@@ -40,7 +40,7 @@
         </footer>
         {block scripts}
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script>
+        <!-- script src="https://nette.github.io/resources/js/3/netteForms.min.js"></script -->
         <script src="{$basePath}/bootstrap/js/bootstrap.bundle.min.js"></script>
         <script src="{$basePath}/js/main.js"></script>
         {/block}
